--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-	"name": "CNodeReactNative",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"react": "16.0.0-alpha.6",
-		"react-native": "0.43.3"
-	},
-	"devDependencies": {
-		"babel-jest": "19.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "19.0.2",
-		"react-test-renderer": "16.0.0-alpha.6"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "CNodeReactNative",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "immutable": "^3.8.1",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.43.3",
+    "react-navigation": "git+https://github.com/react-community/react-navigation.git",
+    "react-addons-pure-render-mixin": "^15.3.2"
+  },
+  "devDependencies": {
+    "babel-jest": "19.0.0",
+    "babel-preset-react-native": "1.9.1",
+    "jest": "19.0.2",
+    "react-redux": "^5.0.4",
+    "react-test-renderer": "16.0.0-alpha.6",
+    "redux": "^3.6.0"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
