--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "immutable": "^3.8.1",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.6",
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-mixin": "^3.0.5",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "1.9.1",
     "jest": "19.0.2",
     "react-redux": "^5.0.4",
