--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-mixin": "^3.0.5",
     "react-native": "0.43.3",
+    "react-native-camera": "^0.9.0",
     "react-native-simple-markdown": "^1.0.60-rc.3",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git",
     "react-redux": "^5.0.4",
