--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.43.3",
     "react-native-camera": "^0.9.0",
     "react-native-simple-markdown": "^1.0.60-rc.3",
+    "react-native-vector-icons": "^4.2.0",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git",
     "react-redux": "^5.0.4",
     "react-timer-mixin": "^0.13.3",
