--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "16.0.0-alpha.6",
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-mixin": "^3.0.5",
-    "react-native": "0.43.3",
+    "react-native": "0.44.0",
     "react-native-camera": "^0.9.0",
     "react-native-markdown-view": "^1.0.0",
+    "react-native-scrollable-tab-view": "^0.6.6",
+    "react-native-simple-markdown": "^1.0.60-rc.3",
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git",
     "react-redux": "^5.0.4",
