--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "react-mixin": "^3.0.5",
     "react-native": "0.44.0",
     "react-native-camera": "^0.9.0",
-    "react-native-markdown-view": "^1.0.0",
+    "react-native-htmlview": "^0.9.0",
     "react-native-scrollable-tab-view": "^0.6.6",
-    "react-native-simple-markdown": "^1.0.60-rc.3",
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git",
     "react-redux": "^5.0.4",
