增加扫描二维码登录，但是样式还需要调整一下，流程已经通了

--- a/ios/CNodeReactNative/Info.plist
+++ b/ios/CNodeReactNative/Info.plist
@@ -55,5 +55,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+    <string></string>
+
+    <!-- Include this only if you are planning to use the camera roll -->
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string></string>
+
+    <!-- Include this only if you are planning to use the microphone for video recording -->
+    <key>NSMicrophoneUsageDescription</key>
+    <string></string>
 </dict>
 </plist>
