--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.6",
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-mixin": "^3.0.5",
